# aws-easy-sso

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  run.sh  test.http
src/: aws.rs  config.rs  main.rs  script_writer.rs  utils.rs
src/aws/: account_info_provider.rs  cli.rs  regions.rs  token.rs  token_cache.rs
src/utils/: json.rs  serde.rs
