[package]
name = "aws-easy-sso"
version = "0.3.2"
description = "CLI tool to make AWS SSO more convenient."
authors = ["Martin Sturm", "Martin Sturm <noreply@martin-sturm.cloud>"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/sturmm/aws-easy-sso"
repository = "https://github.com/sturmm/aws-easy-sso"
keywords = ["aws", "sso", "cli"]
categories = ["command-line-utilities", "aws"]

[[bin]]
name = "aws-easy-sso-cli"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.75"
aws-config = "0.56.1"
aws-sdk-sso = "^0.33.0"
aws-sdk-ssooidc = "^0.33.0"
aws-types = "0.56.1"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive", "env"] }
directories = "5.0.1"
inquire = "^0.6.2"
open = "5.0.0"
rust-crypto = "0.2.36"
rust-ini = "0.19.0"
serde = { version = "1.0.188",  features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
